--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,15 @@
         "mf4php/mf4php": "1.1.2",
         "lf4php/lf4php-log4php": "2.0.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
     "provide": {
         "szjani/cqrs-sample-read-implementation": "master",
         "szjani/cqrs-sample-write-implementation": "master"
     },
     "autoload": {
-        "psr-0": {"hu": "src/"}
+        "psr-0": {"hu": ["src/", "tests/"]}
     },
     "repositories": [
         {
